# haskell-exercises

./: .gitignore  LICENSE  README.md
01-GADTs/: build  exercise01.cabal  review.md
01-GADTs/src/: Exercises.hs  GADTs.hs
02-FlexibleInstances/: revivew.md
02-FlexibleInstances/src/: Exercises.hs
03-KindSignatures/: review.md
03-KindSignatures/src/: Exercises.hs  KindSignatures.hs
04-DataKinds/: exercise04.cabal  review.md  stack.yaml
04-DataKinds/src/: DataKinds.hs  Exercises.hs
05-RankNTypes/: review.md
05-RankNTypes/src/: Exercises.hs
06-TypeFamilies/src/: Exercises.hs
07-ConstraintKinds/: exercise07.cabal
08-PolyKinds/: exercise08.cabal
08-PolyKinds/src/: PolyKinds.hs
09-MultiParamTypeClasses/src/: Exercises.hs  MultiParamTypeClasses.hs
10-FunctionalDependencies/: exercise10.cabal
10-FunctionalDependencies/src/: Exercises.hs  FunctionalDependencies.hs
exercise01/: exercise01.cabal
exercise01/src/: Exercises.hs
exercise02/: exercise02.cabal
exercise02/src/: FlexibleInstances.hs
exercise03/: exercise03.cabal
exercise03/src/: Exercises.hs  KindSignatures.hs
exercise04/: exercise04.cabal
exercise04/src/: Exercises.hs
exercise05/: exercise05.cabal
exercise05/src/: Exercises.hs  RankNTypes.hs
exercise06/: exercise06.cabal
exercise06/src/: Exercises.hs  TypeFamilies.hs
exercise07/src/: ConstraintKinds.hs  Exercises.hs
exercise08/src/: Exercises.hs  PolyKinds.hs
exercise09/: exercise09.cabal
exercise09/src/: Exercises.hs  MultiParamTypeClasses.hs
