name:                exercise09
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language: Haskell2010
  build-depends:    base
                  , containers
  hs-source-dirs:   src
  exposed-modules:  MultiParamTypeClasses
                  , Exercises

